[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climakitae"
version = "1.2.3"
description = "Climate data analysis toolkit"
readme = "README.md"
authors = [
    {name = "Cal-Adapt Analytics Engine Team", email = "analytics@cal-adapt.org"}
]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
]
requires-python = "==3.11.*"
dependencies = [
    "setuptools==75.8.2",
    "pip==24.3.1",
    "boltons==24.0.0",
    "jsonpickle==4.0.0",
    "bottleneck==1.4.2",
    "boto3==1.35.88",
    "tqdm==4.67.1",
    "pydantic==2.10.4",
    "pyarrow==18.1.0",
    "xarray==2025.1.1",
    "dask==2024.11.2",
    "cartopy==0.24.0",
    "dask-gateway==2024.1.0",
    "geopandas==1.0.1",
    "intake==2.0.7",
    "intake-xarray==2.0.0",
    "intake-esm==2023.11.10",
    "intake-geopandas==0.4.0",
    "jinja2==3.1.5",
    "matplotlib==3.10.0",
    "metpy==1.6.3",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "param==2.2.0",
    "psutil==5.9.8",
    "pyproj==3.7.0",
    "pytest==8.3.4",
    "rioxarray==0.17.0",
    "s3fs==2024.12.0",
    "scipy==1.15.0",
    "statsmodels==0.14.4",
    "markupsafe==3.0.2",
    "webob==1.8.9",
    "affine==2.4.0",
    "attrs==24.3.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "cfgrib==0.9.15.0",
    "cftime==1.6.4",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "docopt-ng==0.9.0",
    "eccodes==2.39.0",
    "findlibs==0.0.5",
    "fsspec==2024.12.0",
    "h5netcdf==1.4.1",
    "h5py==3.12.1",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.5.2",
    "lxml==5.3.0",
    "netcdf4==1.7.2",
    "numcodecs==0.14.1",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "pycparser==2.22",
    "pydap==3.5.3",
    "pyparsing==3.2.1",
    "rasterio==1.4.3",
    "requests==2.32.3",
    "soupsieve==2.5",
    "urllib3==1.26.19",
    "zarr==3.0.0",
    "zipp==3.20.2",
    "numba==0.60.0",
    "timezonefinder==6.5.7",
    "dask-geopandas==0.4.2",
    "xclim==0.54.0",
    "h3==4.1.1",
    "cf_xarray==0.10.0",
    "filelock==3.16.1",
    "yamale==5.3.0",
    "distributed==2024.11.2",
    "xmip==0.7.2"
]
urls = {Homepage = "https://github.com/cal-adapt/climakitae"}

[project.optional-dependencies]
docs = [
    "Sphinx",
    "sphinx-book-theme",
    "sphinx-design",
    "nbsphinx",
]
tests = [
    "pytest",
    "pytest-cov==6.1.1",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"*" = ["data/*.csv", "data/cmaps/*.txt"]

[tool.pytest.ini_options]
markers = [
    "advanced: marks tests as advanced (deselect with '-m \"not advanced\"')",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]