[metadata]
name = climakitae
version = 1.3.0
author = Cal-Adapt Analytics Engine Team
author_email = analytics@cal-adapt.org
description = Climate data analysis toolkit
long_description = file: README.md
url = https://github.com/cal-adapt/climakitae
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
packages = find:
install_requires =
    aiobotocore<=2.16.1
    boto3<=1.35.88
    dask
    dask-gateway
    dask-geopandas
    fsspec
    geopandas
    intake
    intake-esm<=2023.11.10
    intake-geopandas
    intake-xarray
    matplotlib
    numcodecs<=0.14.1
    numpy
    pandas
    param
    psutil
    pyproj
    pytz
    rioxarray
    s3fs>=2024.12.0
    scipy
    setuptools<=75.6.0
    shapely
    statsmodels
    timezonefinder
    tqdm
    xarray
    xclim<=0.54.0
    xmip
tests_require =
    cftime
    pytest

[options.extras_require]
docs =
    Sphinx
    sphinx-book-theme
    sphinx-design
    nbsphinx

[options.package_data]
* = data/*.csv, data/cmaps/*.txt
